# aihws-dummy

./: .env_example  .gitignore  .pre-commit-config.yaml  14_llm_mining.ipynb  README.md  git_advanced.md  git_basics.md  main.py  pyproject.toml  settings.py  uv_basics.md
exercises/02_session/: 02_session_SVM_solution.ipynb  02_session_SVM_v2.ipynb
prompt_templates/: simple_prompt.txt
src/: data_handler.py
tests/src/: test_data_handler.py
