[project]
name = "ai4hws"
version = "0.1.0"
description = ""
authors = [
    {name = "Anna Buch", email = "anna.buch@tu-berlin.de"},
]
requires-python = ">=3.12"
readme = "README.md"

dependencies = [
    "aiohttp>=3.13.3",
    "cartopy>=0.25.0",
    "category-encoders>=2.9.0",
    "elasticsearch>=9.3.0",
    "langchain-docling==2.0.0",
    "fiona==1.9.6",
    "folium>=0.20.0",
    "geojson>=3.2.0",
    "graphviz>=0.21",
    "hydromt>=0.10.1",
    "ipykernel>=6.30.1",
    "lightgbm>=4.6.0",
    "mapclassify>=2.10.0",
    "matplotlib>=3.10.8",
    "netcdf4>=1.7.4",
    "opencv-python>=4.13.0.92",
    "osr>=0.0.1",
    "packaging>=25.0",
    "pandas==2.2.3",
    "pgmpy>=1.0.0",
    "py-banshee>=1.1.1",
    "pyogrio>=0.12.1",
    "rasterio>=1.5.0",
    "seaborn>=0.13.2",
    "shapely>=2.1.2",
    "umap-learn>=0.5.11",
    "wandb>=0.24.0",
    "weave>=0.52.24",
    "wget>=3.2",
    "xgboost>=3.1.3",
    "rioxarray>=0.17.0",
    "geopandas>=0.14.4",
    "xarray>=2022.3.0",
    "toml>=0.10.2",
    "tqdm>=4.67.3",
    "torchvision>=0.25.0",
    "webp>=0.4.0",
    "jupyter-book>=2.1.2",
    "shap==0.47.0",
    "ipywidgets>=8.1.8",
    "jupyter>=1.1.1",
    "widgetsnbextension>=4.0.15",
    "pyqt6>=6.10.2",
    "langchain-docling>=2.0.0",
    "spacy>=3.8.11",
    "bitsandbytes==0.48.0",
    "flash-attention>=1.0.0",
    "ipytest>=0.14.2",
]

[tool.ruff]
line-length = 120
exclude = [".venv", "versioneer.py", "*_cache"] # keep formating ".ipynb"

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint]
# see, https://docs.astral.sh/ruff/rules
select = [
    # defaults
    "F",    # Pyflakes
    "E",    # pycodestyle Error

    # additional
    "A",    # not shadow built-in functions
    "I",    # isort imports
    "N",    # check for PEP8 naming conventions
    "W",    # pycodestyle Warning

    # clean docstrings
    "D201", "D207", "D208", "D209", "D210", "D214", "D215", "D300", "D403",

    # auto-remove unused 'noqa' comments
    "RUF100", "RUF101",
]
ignore = ["C901", "E714", "I001"]
exclude = [".ipynb"]
fixable = ["ALL"]

[tool.uv.sources]
py-banshee = { git = "https://github.com/mike-mendoza/py_banshee" }



